# whis

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPER_HANDOFF.md  README.md  justfile
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  cmake-apple-silicon.cmake  release-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: flathub-update.yml  release.yml  website.yml
book/: README.md
book/src/part2-overview/: ch06-what-whis-does.md  ch07-crate-architecture.md  ch08-feature-flags.md
book/src/part3-core-easy/: ch09-configuration.md
book/src/part4-core-advanced/: ch14b-local-transcription.md  ch14c-presets.md
book/src/part5-cli/: ch16-clap.md  ch17-hotkeys.md  ch18-ipc.md
book/src/part6-tauri/: ch20-state.md  ch22-shortcuts.md
book/src/part7-frontend/: ch23-vue.md
crates/tauri-plugin-floating-bubble/: Cargo.toml  README.md
crates/whis-cli/: Cargo.toml  README.md
crates/whis-core/: Cargo.toml  README.md
crates/whis-deprecated/: Cargo.toml  README.md
crates/whis-desktop/: Cargo.toml  Info.plist  README.md  tauri.conf.json
crates/whis-mobile/: Cargo.toml  README.md  tauri.conf.json
crates/whis-screenshots/: Cargo.toml  README.md
crates/whis-screenshots/src/: capture.rs  driver.rs  main.rs
docs/: index.html
website/: .lighthouserc.json  README.md  eslint.config.js  i18n.config.ts  index.html  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts
website/i18n/: README.md
website/public/: stats.json
website/src/: App.vue  main.ts
website/types/: i18n.d.ts
(+212 files in other folders)
