[package]
name = "whis-screenshots"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Automated screenshot capture tool for whis-desktop"
publish = false

[[bin]]
name = "whis-screenshots"
path = "src/main.rs"

[dependencies]
fantoccini = "0.21"
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
